force-app/main/default/objects/CalloutSetting__mdt/CalloutSetting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is for saving all data for request</description>
    <label>Callout Setting</label>
    <pluralLabel>Callout Settings</pluralLabel>
</CustomObject>