force-app/main/default/objects/CalloutSetting__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint or URL from service or Named Credential</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>