force-app/main/default/objects/CalloutSetting__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Save token or API Key from service</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>